--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+-f /cvmfs/soft.computecanada.ca/custom/python/wheelhouse/avx2
+-f /cvmfs/soft.computecanada.ca/custom/python/wheelhouse/generic
 tensorflow==2.0.1
 opencv-python==4.1.1.26
 numpy==1.17.2
