--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 -f /cvmfs/soft.computecanada.ca/custom/python/wheelhouse/avx2
 -f /cvmfs/soft.computecanada.ca/custom/python/wheelhouse/generic
-tensorflow_gpu==2.2.0
-opencv-python
-numpy
+
+tensorflow==2.0.1
+opencv-python==4.1.1.26
+numpy==1.17.2
